# magenta

./: Dockerfile  MAGENTA_TODO.md  PROJECT.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: config.py  tools.py
docs/: chat_service.md  initial_data.md  known_issues.md  prompts.md  tools.md
routes/: chats.py  tools.py
services/: chat_service.py  document_service.py
tests/: tests.py
